fix social share buttons margin on mobile

--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -12,6 +12,26 @@ a.abbr {
   cursor: help;
 }
 
+/* h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.75rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+h5 {
+  font-size: 1rem;
+} */
+
 /*
 p + h1,
 p + h2,
